TestSuite/PascalABCTests/errors/err0150.pas
var f : array[1..4] of byte;
begin
readln(f);
end.